2003-11-17  Murray Cumming  <murrayc@usa.net>

	* gtk/src/combobox.hg: Changed constructors, and added set_model(),
	because the model is now a non-construct-only property in GTK+.
	* gtk/gtkmm/comboboxtext.[h|cc]: Used changed API to implement this.
	examples/book/combobox/text now works.

2003-11-16  Murray Cumming  <murrayc@usa.net>

	* gtk/src/toolbar.[hg|cc]: Wrapped new functions, including the 
	ToolItem-based insert, append, and prepend, and deprecated our
	equivalents of the deprecated C functions.
	Moved deprecated Elements API into toolbar_elements.[h|cc].
	* gtk/src/gtk_docs.xml: Replaced with freshly generated output
	from docextract_to_xml.py from pygtk.
	* Added gdk/src/pixbufformat.[hg|ccg] as wrapper for GdkPixbufFormat.

2003-11-14  Murray Cumming  <murrayc@usa.net>
 
 	* gdk/src/gdk_docs_override.xml, gtk/src/gtk_docs_override.xm,
 	pango/src/pango_docs_override.xml. Added overrides for 4 or 5 methods
 	that mention Glib::Free, though I feel sure that I did this once
 	before. Bug #126870.

2003-11-05  Murray Cumming  <murrayc@usa.net>

	* gtk/src/widget.hg, gdk/src/window.hg: Fixed typos to fix build.

2003-11-03  Murray Cumming  <murrayc@usa.net>

	* gtk/src/action.[hg|ccg]: Renamed add_action() to add(), to reduce
	the amount of client code slightly.
	* gtk/src/celllayout.[hg|ccg]: Added set_cell_data_func(), using
	SignalProxy.
	* gtk/src/treemodelfilter.[hg|ccg]: 
	Added set_visible_func(), using SignalProxy.
	Added convert methods.


2003-11-02  Murray Cumming  <murrayc@usa.net>

	* gtk/src/*action.[hg|ccg]: renamed create_from_stock() to
	create() because I think we can overload the methods, because the
	parameters are distinguishable.
	* examples/book/dialogs/: Added filechooserdialog, by copying and
	modifying the fileselectiondialog example.
	* gtk/src/entrycompletion.[hg|ccg]: wrap set_match_func() using
	SignalProxy.

2003-11-01  Murray Cumming  <murrayc@usa.net>

	* gtk/src/: Added wrappers for FileChooser, FileChooserWidget,