@@ -8,7 +8,8 @@ web_path_reference = $(web_path_docs)reference
 
 EXTRA_DIST = README Doxyfile.in \
              gtkmm_header.html_fragment gtkmm_footer.html_fragment beautify_docs.pl \
-             html gtkmm_doxygen_tags doxygen_to_devhelp.xsl gtkmm2.devhelp
+             html gtkmm_doxygen_tags doxygen_to_devhelp.xsl gtkmm2.devhelp \
+             xml/index.xml #Just to satisfy the dependency when building from the tarball.
 
 # The html is generated by doxygen. We generate xml also, but we are not distributing it yet.
 # The installdox thing is part of doxygen - it fixes the URLs to point to the glibmm reference docs.
@@ -23,9 +24,10 @@ html/index.html: $(doxygen_configfile_source) $(beautify_docs)
 	DOXYGEN_IMAGE_PATH="$${DOXYGEN_IMAGE_PATH:=$$image_path}" doxygen $(doxygen_configfile)
 	cd html && ./installdox -l glibmm_doxygen_tags@../../../../glibmm-2.4/docs/reference/html && cd ..
 	$(PERL_PATH) $(beautify_docs) html
-	
-devhelp-reference: html/index.xml
-	xsltproc -o html/gtkmm2.devhelp doxygen_to_devhelp.xsl xml/index.xml
+
+# DevHelp reference
+gtkmm2.devhelp: xml/index.xml
+	xsltproc -o gtkmm2.devhelp doxygen_to_devhelp.xsl xml/index.xml
 
 gtkmm-reference-html.tar.gz: html/index.html
 	tar cf - html | gzip -c --best >$@
@@ -40,9 +42,11 @@ doc-clean:
 	-rm -rf html
 	-rm -rf xml
 	-rm -f gtkmm_doxygen_tags
+	-rm -f gtkmm2.devhelp  
 	-rm -f gtkmm-reference-html.tar.gz gtkmm-reference-html.tar.bz2
 
 referencedir = $(gtkmm_docdir)/reference/html
+devhelpdir = $(datadir)/devhelp/books/gtkmm-2.4
 
 install-reference: html/index.html
 	@$(NORMAL_INSTALL)
