@@ -51,11 +51,16 @@ public:
   _WRAP_METHOD(void set_use_underline(bool use_underline = true), gtk_expander_set_use_underline)
   _WRAP_METHOD(bool get_use_underline() const, gtk_expander_get_use_underline)
 
+  _WRAP_METHOD(void set_use_markup(bool use_markup = true), gtk_expander_set_use_markup)
+  _WRAP_METHOD(bool get_use_markup() const, gtk_expander_get_use_markup)
+
   _WRAP_METHOD(void set_label_widget(Widget& label_widget), gtk_expander_set_label_widget)
   _WRAP_METHOD(Widget* get_label_widget(), gtk_expander_get_label_widget)
   _WRAP_METHOD(const Widget* get_label_widget() const, gtk_expander_get_label_widget)
 
-  _IGNORE_SIGNAL("activate") //keybinding  
+  _IGNORE_SIGNAL("activate") //keybinding
+
+  //TODO: Properties.  
 };
 
 
