@@ -1,3 +1,9 @@
+2003-11-19  Murray Cumming  <murrayc@usa.net>
+
+	* docs/reference/Makefile.am: Fix the distcheck for the .devhelp file.
+	* gtk/src/expander.hg: Add the get/set_markup methods, though there
+	are no .defs for them yet.
+
 2003-11-17  Murray Cumming  <murrayc@usa.net>
 
 	* gtk/src/combobox.hg: Changed constructors, and added set_model(),
